home page display layout fixing card spacing

--- a/client/src/components/PageContent/Features/Features.css
+++ b/client/src/components/PageContent/Features/Features.css
@@ -11,10 +11,6 @@
   border-radius: 20px;
 }
 
-.feature-card {
-  width: 18rem;
-}
-
 .img-control {
   height: 198px;
 }
